# echidna

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cursor/plans/: README.md  priority-1-project-templates.md  priority-10-debug-mode.md  priority-2-docs-command.md  priority-3-toolshed-publish.md  priority-4-advanced-validation.md  priority-5-test-improvements.md  priority-6-watch-mode.md  priority-7-cpp-extension.md  priority-8-workspace.md  priority-9-version-management.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
plans/: mighty-rolling-crystal.md
src/: config.rs  error.rs  lib.rs  main.rs  workspace.rs
src/chimerax/: detect.rs  executor.rs  mod.rs
src/commands/: build.rs  clean.rs  debug.rs  docs.rs  info.rs  init.rs  install.rs  mod.rs  publish.rs  python.rs  run.rs  setup_ide.rs  testing.rs  validate.rs  version.rs  watch.rs  workspace.rs
src/templates/: bundle.rs  mod.rs
templates/: cmd_py.tmpl  pyproject.toml.tmpl  readme_md.tmpl  smoke_cxc.tmpl
templates/command/: init_py.tmpl  pyproject.toml.tmpl
templates/common/: readme_md.tmpl  smoke_cxc.tmpl
templates/cpp/: cmd_py.tmpl  extension_cpp.tmpl  init_py.tmpl  pyproject.toml.tmpl
templates/fetch/: fetch_py.tmpl  init_py.tmpl  pyproject.toml.tmpl
templates/format/: init_py.tmpl  open_py.tmpl  pyproject.toml.tmpl
templates/preset/: init_py.tmpl  preset_py.tmpl  pyproject.toml.tmpl
templates/selector/: init_py.tmpl  pyproject.toml.tmpl  selector_py.tmpl
templates/tool-html/: init_py.tmpl  tool_py.tmpl
tests/: clean.rs  cli.rs  init.rs
(+2 files in other folders)
